@@ -12,6 +12,9 @@ Unreleased
   if a file changed from an image file to a non-image file or vice versa.
   (LP #807478)
 
+- Mailed in content now gets a created timestamp set from the Date header of
+  the incoming email instead of the current time. (LP #806066)
+
 3.67 (2011-06-30)
 -----------------
 
